app/assets/stylesheets/progress.css.scss
@import "lib/css3-mixins";
@import "lib/button-mixins";
@import "compass/utilities/general/clearfix";
@import "variables";
@import "score";

#link-progress-close {
	top: 45px;

	// @media screen and (max-width: $desktopwidth) {
	// 	top: 45px;
	// }

	&:before {
		color: $grayDarkest;
	}
}

.leaflet-container {
	background: $grayLight;
}

.cluster-small, .cluster-medium, .cluster-large {
	width: 30px;
	height: 30px;
	text-align: center;
	background: $grayLightest;
	color: $grayDarker;
	font-size: 16px;
	line-height: 30px;
	border: 2px solid $grayLighter;
	@include rounded-corners(15px);
}

.cluster-medium {
	background: $grayLighter;
	border-color: $grayLight;
}

.cluster-large {
	background: $grayLight;
	border-color: $gray;
}

